Added footer to file

--- a/practice.html
+++ b/practice.html
@@ -38,6 +38,8 @@
     <h2>Join us today</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error magni, obcaecati quasi saepe, quibusdam eaque harum illum molestias illo quidem cumque fugit maiores vitae iure, ex reiciendis earum rem. Optio.</p>
     <form><input type="Email" name="Email" placeholder="Enter Email & hit enter" required></form>
-    </section>
+    </section>    
+    <footer> This is Footer</footer>
+
     </body>
     </html>>
